--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   --white-color: #ffffff;
 }
 
+h1,h2,h3,p {
+  margin: 0;
+}
+
 body {
   font-family: Roboto, sans-serif;
   color: var(--main-text-color-);
@@ -14,6 +18,12 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   background-color: var(--white-color);
+}
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 .title {
   color: var(--sec-text-color-);
