--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ h1,h2,h3,p {
 }
 
 body {
+  margin: 0;
+
   font-family: Roboto, sans-serif;
   color: var(--main-text-color-);
   font-size: 14px;
@@ -21,11 +23,14 @@ body {
 }
 .container {
   width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-
+  padding: 0;
+ margin-left: auto;
+ margin-right: auto;
 }
+
 .title {
+  margin-bottom: 50px;
+
   color: var(--sec-text-color-);
   font-weight: 700;
   font-size: 36px;
@@ -41,6 +46,38 @@ body {
   list-style: none;
 }
 /* NAV */
+
+
+.header {
+  display: flex;
+  align-items: center;
+  height: 80px;
+}
+
+.nav {
+  display: flex;
+}
+.nav-list {
+  display: flex;
+}
+.nav-list-item {
+  margin-right: 50px;
+}
+.nav-list-item:last-child{
+  margin-right: 0;
+}
+.header-list {
+  display: flex;
+  margin-left: auto;
+  justify-content: flex-end;
+}
+.header-list-item {
+  margin-right: 50px;
+
+}
+.header-list-item:last-child {
+  margin-right: 0;
+}
 .nav .link {
   color: var(--sec-text-color-);
   font-weight: 500;
@@ -53,20 +90,26 @@ body {
 .nav .link.current {
   color: var(--brend-color-);
 }
+
+/* .nav-link .link:hover,
+.nav-link .link:focus {
+  color: var(--brend-color-);
+} */
 .header-link {
   font-weight: 500;
   letter-spacing: 0.02em;
   color: #757575;
   text-decoration: none;
 }
-
-.header-link:hover,
-.header-link:focus {
+  .header-link:hover,
+  .header-link:focus {
   color: var(--brend-color-);
 }
 /* LOGO */
 .logo {
+  
   color: var(--brend-color-);
+
   font-family: Raleway, sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -82,8 +125,16 @@ body {
 /* HERO */
 .hero {
   background-color: var(--sec-text-color-);
+  text-align: center;
+   padding-top: 200px;
+  padding-bottom: 200px;
+  margin-bottom: 94px;
 }
 .hero-title {
+ margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+
   color: var(--white-color);
   font-weight: 900;
   font-size: 44px;
@@ -93,6 +144,15 @@ body {
   text-transform: uppercase;
 }
 .hero-button {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 200px;
+  min-height: 50px;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+
   background-color: var(--brend-color-);
   color: var(--white-color);
   cursor: pointer;
@@ -101,8 +161,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.87;
-display: flex;
-align-items: center;
+
 text-align: center;
 letter-spacing: 0.06em;
 }
@@ -113,7 +172,8 @@ letter-spacing: 0.06em;
 }
 /* TEAM */
 .team {
-  background-color: var(--sec-bg-color-);
+  padding-bottom: 94px;
+    background-color: var(--sec-bg-color-);
 }
 .team-title .team-text {
   text-align: center;
@@ -121,10 +181,25 @@ letter-spacing: 0.06em;
   line-height: 1.19;
 }
 /* ABOUT */
+.about-us, .works {
+  margin-bottom: 94px;
+}
+
 .about-us-title,
 .team-title {
   color: var(--sec-text-color-);
   font-weight: 700;
+}
+
+.about-list {
+  display: flex;
+}
+.about-list-item {
+  margin-right: 30px;
+  width: 270px;
+}
+.about-list-item: :last-child{
+  margin-right: 0;
 }
 
 .about-us-title {
@@ -135,6 +210,37 @@ letter-spacing: 0.06em;
 }
 .about-txt {
   line-height: 1.71;
+}
+
+.works-list {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+  
+}
+
+.works-list-item {
+  margin-right: 30px;
+  width: 370px;
+  height: 294px;
+  
+}
+
+.works-list-item:last-child {
+  margin-right: 0;
+  
+}
+.team-list {
+  display: flex;
+ justify-content: space-between;
+ padding: 0;
+}
+.team-list-item {
+  width: 270px;
+  /* border-left: 1px normal var(--sec-text-color-);
+  border-right: 1px normal var(--sec-text-color-);
+  border-bottom: 2px normal var(--sec-text-color-); */
+  text-align: center;
 }
 
 .team-title {
@@ -176,12 +282,43 @@ font-size: 16px;
 line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
+border-radius: 4px;
 
 }
+
 .filter-buttons:focus,
 .filter-buttons:hover {
   background-color: var(--brend-color-);
   color: var(--white-color);
+}
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-top: 94px;
+  margin-bottom: 34px;
+}
+.filter-item {
+  margin-right: 8px;
+  
+}
+
+.filter-item:last-child {
+  margin-right: 0;
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 94px;
+  
+}
+.cards-list-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.cards-list-item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .card-title {
